build: atualizar dependências no pom.xml e propriedades no yaml